--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-VITE_NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="AIzaSyDE_Mn98wGt9XeCA8GUb02FL8NKuuL4ttU";
-VITE_NEXT_PUBLIC_PORT="httplocalhost:9000";
-# VITE_NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="AIzaSyDE_Mn98wGt9XeCA8GUb02FL8NKuuL4ttU";
+VITE_NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="AIzaSyDE_Mn98wGt9XeCA8GUb02FL8NKuuL4ttU"
+VITE_BACKEND_URL=http://localhost:9000
+VITE_API_URL=http://localhost:9000
+# VITE_NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="AIzaSyDE_Mn98wGt9XeCA8GUb02FL8NKuuL4ttU"
 
 # VITE_NEXT_PUBLIC_GOOGLE_MAPS_API_KEY="AIzaSyDE_Mn98wGt9XeCA8GUb02FL8NKuuL4ttU";import.meta.env.VITE_NEXT_PUBLIC_PORT
